project_code/src/main/fabric8/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
spec:
  rules:
    - host: barjaktarov.local
      http:
        paths:
          - backend:
              serviceName: wordpress
              servicePort: 80
